Front end ready#doors #hello

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,4 +1,5 @@
 <footer class="text-center">
-      		<font size="2">Free software<br></font>
-      		<font size="1">Build version: 0.1</font>
+	<div class="bs-component" style="margin-bottom: 10px;">
+      		<font size="1">Build version: 0.2</font>
+    <div>  		
 </footer>
