--- a/templates/users.html
+++ b/templates/users.html
@@ -6,27 +6,30 @@
          {{template "_navigation.html"}}
       </header>
       <div class="container">
-         <div class="bs-docs-section">
-            <div class="bs-component">
+            <h2> Create, Delete or Modify linux user </h2><br><br>
                <table class="table table-striped table-hover ">
                   <tbody>   
-                  <form action="">
-                     
+                  <form action=""
                         <tr><td>Username</td><td><input type="text" name="username"></td></tr>
                         <tr><td>Shell-type </td><td><input type="text" name="shell-type"></td></tr>
                         <tr><td>Home-Folder </td><td><input type="text" name="home-folder"></td></tr>
                         <tr><td>Password </td><td><input type="password" name="password"></td></tr>
-                        <tr><td>Sudo user? </td><td><input type="radio" name="issudouser" value="Yes">Yes <input type="radio" name="isssudouser" value="No">No </td></tr>
-                     	
+                        <tr><td>Sudo user? </td><td><input type="radio" name="issudouser" value="Yes">Yes    <input type="radio" name="issudouser" value="No">No    </td></tr>
                     </form> 
                   </tbody>
                </table>
-               <button type="button">Create</button><br>
-               <button type="button">Delete</button><br>
-               <button type="button">Modify</button><br>
-               <textarea rows="4" cols="50">
+               <br>
+               <div style="text-align: center;">
+               <button type="button">Create</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               <button type="button">Delete</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               <button type="button">Modify</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               <br><br>
+               <h4>Result</h4>
+               <textarea rows="4" cols="80">
                
                </textarea>
+               </div>
+               <br><br>
             </div>
          </div>
       </div>
