--- a/templates/users.html
+++ b/templates/users.html
@@ -62,16 +62,23 @@
             		var pass = $("#password").val();
             		var sudoopt = $('#issudouser').val();
             		var operation = $('#operation').val();
-					var msgToSend = username + "##" + shelltype + "##" + homefolder + "##" + pass + "##" + sudoopt + "##" + operation;
         			
-            		//msgToSend="hello alok how are you";
+        			var msgToSend = {
+        				username: $("#username").val(),
+        				shelltype: $("#shell-type").val(),
+        				homefolder: $("#home-folder").val(),
+        				pass: $("#password").val(),
+        				sudoopt: $('#issudouser').val(),
+        				operation: $('#operation').val(),
+        			}
             		
-		         	if (!msgToSend) return false;
+            		var msgJSON = JSON.stringify(msgToSend);
+		         	if (!msgJSON) return false;
 		          	if (!socket) {
 		            	alert("Error: There is no socket connection.");
 		            	return false;
 		          	}
-		          	socket.send(msgToSend);
+		          	socket.send(msgJSON);
 		          	return false;
 		        });
         		
