--- a/templates/users.html
+++ b/templates/users.html
@@ -47,22 +47,15 @@
 			<div style="text-align: center;">
                <input type="submit" value="Submit" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                <br><br>
-            </div> 	
-         </form>
-         
+	         <h4>Console</h4>
+	         <textarea rows="4" cols="80" id="textbox"></textarea>
+	         </div> 
+         </form>	
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
       		$(function(){
       			var socket = null;
         		$("#chatbox").submit(function(){
-        			
-        			var username = $("#username").val();
-					var shelltype = $("#shell-type").val(); 
-            		var homefolder = $("#home-folder").val();
-            		var pass = $("#password").val();
-            		var sudoopt = $('#issudouser').val();
-            		var operation = $('#operation').val();
-        			
         			var msgToSend = {
         				username: $("#username").val(),
         				shelltype: $("#shell-type").val(),
@@ -71,7 +64,6 @@
         				sudoopt: $('#issudouser').val(),
         				operation: $('#operation').val(),
         			}
-            		
             		var msgJSON = JSON.stringify(msgToSend);
 		         	if (!msgJSON) return false;
 		          	if (!socket) {
@@ -81,8 +73,6 @@
 		          	socket.send(msgJSON);
 		          	return false;
 		        });
-        		
-        			
 	        		if (!window["WebSocket"]) {
 	          			alert("Error: Your browser does not support web sockets.")
 	        		} else {
@@ -90,21 +80,21 @@
 	          			socket = new WebSocket("ws://localhost:8005/ws");
 	          			
 	          			socket.onmessage = function(e) {
-	            			alert(e.data);
+	            			$('#textbox').append(e.data); 
+	            			//alert(e.data);
 	          			}
 	          			
 	          			socket.onclose = function(event) {
-	          				alert("Socket connection closed");
+	          				//alert("Socket connection closed");
 	          			}
 	          			
 	          			socket.onerror = function(event) {
-	          				alert("Socket error");
+	          				//alert("Socket error");
 	          			}
 	          			
 	          			socket.onopen = function(event) {
-	          				alert("Socket open");
+	          				//alert("Socket open");
 	          			}
-
         			}
 	      		});
     	</script>
