--- a/templates/users.html
+++ b/templates/users.html
@@ -86,7 +86,7 @@
 	          			}
 	          			
 	          			socket.onclose = function(event) {
-	          				//alert("Socket connection closed");
+	          				alert("Socket connection closed");
 	          			}
 	          			
 	          			socket.onerror = function(event) {
