--- a/templates/users.html
+++ b/templates/users.html
@@ -11,6 +11,14 @@
          <form id="chatbox">
             <table class="table table-striped table-hover ">
                <tbody>
+               	  <tr>
+                     <td>Operation </td>
+                     <td>
+                        <input type="radio"  name="operation" value="Create">Create&nbsp;&nbsp;
+                        <input type="radio"  name="operation" value="Delete">Delete&nbsp;&nbsp;
+                        <input type="radio"  name="operation" value="Modify">Modify&nbsp;&nbsp;
+                     </td>
+                  </tr>
                   <tr>
                      <td>Username</td>
                      <td><input type="text" id="username"></td>
@@ -28,18 +36,10 @@
                      <td><input type="password" id="password"></td>
                   </tr>
                   <tr>
-                     <td>Sudo user? </td>
+                     <td>Make the user sudo user?</td>
                      <td>
-                        <input type="radio" id="issudouser" "name="issudouser" value="Yes">Yes&nbsp;&nbsp;
-                        <input type="radio" id="issudouser" name="issudouser" value="No">No&nbsp;&nbsp;
-                     </td>
-                  </tr>
-                  <tr>
-                     <td>Operation </td>
-                     <td>
-                        <input type="radio" id="operation" name="operation" value="Create">Create&nbsp;&nbsp;
-                        <input type="radio" id="operation name="operation" value="Delete">Delete&nbsp;&nbsp;
-                        <input type="radio" id="operation" name="operation" value="Modify">Modify&nbsp;&nbsp;
+                        <input type="radio" name="sudo" value="Yes">Yes&nbsp;&nbsp;
+                        <input type="radio" name="sudo" value="No">No&nbsp;&nbsp;
                      </td>
                   </tr>
                </tbody>
@@ -62,8 +62,8 @@
         				shelltype: $("#shell-type").val(),
         				homefolder: $("#home-folder").val(),
         				pass: $("#password").val(),
-        				sudoopt: $('#issudouser').val(),
-        				operation: $('#operation').val(),
+        				sudoopt: $('input[name=sudo]:checked').val(),
+        				operation: $('input[name=operation]:checked').val(),
         			}
         			var msgJSON = JSON.stringify(msgToSend);
 		         	if (!msgJSON) return false;
